<resources>
    <string name="app_name">ItaguiTur</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrarse">Registrarse</string>
    <string name="repassword">Repetir password</string>
    <string name="correo">Correo electrónico</string>
    <string name="cancelar">Cancelar</string>
    <string name="miperfil">Mi Perfil</string>
    <string name="cerrarS">Cerrar Sesión</string>
    <string name="salir">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parque1">Parque Las Chimeneas</string>
    <string name="parque2">Parque El Artista</string>
    <string name="mFrag1">Chimeneas</string>
    <string name="mFrag2">Artista</string>
    <string name="title_activity_parques">ParquesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="descrip">Parque para la diversión de la familia</string>
    <string name="dir">Cll 15c Sur Cra 52d</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
</resources>
