<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/chimeneas"
        android:id="@+id/iFoto"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parque1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/tNombre"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descrip"
            android:textSize="15sp"
            android:textColor="@color/blue"
            android:id="@+id/tDescrip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/dir"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/tDirec"/>
    </LinearLayout>

</LinearLayout>